# ska-sdp-benchmark-monitor

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  SCOOP-615-gcc-analysis.txt  pyproject.toml  requirements.txt  setup.py
.ci/: .gitlab-ci.dockerfile  requirements.testing.txt
benchmon/: __init__.py  _version.py
benchmon/common/: utils.py
benchmon/common/slurm/: slurm_utils.py
benchmon/exceptions/: __init__.py
benchmon/hardware/: __init__.py  hardware_monitor.py  run.py
benchmon/hardware/advanced/: pingpongroundtrip.py
benchmon/hardware/gatherers/: accelerator.py  cpu.py  interface.py  memory.py  mounts.py  pci.py  ping.py  system.py  topology.py
benchmon/report/: report_generator.py  template.md
benchmon/rt-monitor/: .clang-format  CMakeLists.txt
benchmon/rt-monitor/cmake/: dependencies.cmake  find_external.cmake
benchmon/rt-monitor/inc/: cpu_monitor.h  cpufreq_monitor.h  db_stream.hpp  disk_monitor.h  file_stream.hpp  ib_monitor.h  mem_monitor.h  monitor_io.h  net_monitor.h  pause_manager.h  thread_safe_queue.hpp  variable_monitor.h
benchmon/rt-monitor/src/: cpu_monitor.cpp  cpufreq_monitor.cpp  disk_monitor.cpp  ib_monitor.cpp  main.cpp  mem_monitor.cpp  monitor_io.cpp  net_monitor.cpp  pause_manager.cpp  variable_monitor.cpp
benchmon/run/: __init__.py  cpu_mon.sh  cpu_mon_hp.sh  cpufreq_mon.sh  cpufreq_mon_hp.sh  csv_importer.py  csv_monitor.py  disk_mon.sh  disk_mon_hp.sh  hf_cpu_mon.sh  hf_cpufreq_mon.sh  hf_disk_mon.sh  hf_ib_mon.sh  hf_mem_mon.sh  hf_net_mon.sh  hf_timing_mapping.sh  hp_collector.py  hp_processor.py  ib_mon.sh  ib_mon_hp.sh  influxdb_sender.py  mem_mon.sh  mem_mon_hp.sh  net_mon.sh  net_mon_hp.sh  pre_dool_hc.sh  run.py  run_monitor.py  run_utils.py  timing_mapping_mon.sh  tracing_wrappers.sh
benchmon/software/: __init__.py  run.py  software_monitor.py
benchmon/software/gatherers/: environment.py  modules.py  pyenv.py  spack.py
benchmon/visualization/: __init__.py  call_profile.py  multi_node_visualizer.py  power_metrics.py  system-monitoring-dashboard.json  system_binary_reader.py  system_metrics.py  system_metrics_binary.py  system_metrics_dool.py  system_metrics_influxdb.py  utils.py  visualizer.py  visualizer_binary.py  visualizer_influxdb.py
benchmonspc/: README.md  benchmonspc.sh  benchmonspc_call.py  benchmonspc_kill.sh  benchmonspc_pow.py  benchmonspc_sys.py  benchmonspc_visu.py  mono_to_real  test_bg.sh  test_multi_sys+pow.sh  test_sys+pow+call.sh  test_sys+pow.sh
docs/: Makefile  generate_api.sh  requirements.txt
docs/src/: conf.py  index.rst
docs/src/api/: benchmon.common.rst  benchmon.common.slurm.rst  benchmon.exceptions.rst  benchmon.hardware.advanced.rst  benchmon.hardware.gatherers.rst  benchmon.hardware.rst  benchmon.rst  benchmon.run.rst  benchmon.software.gatherers.rst  benchmon.software.rst  benchmon.visualization.rst
docs/src/guide/: getting_started.md  tool_csv_importer.md  tutorial_export-benchmon-influxdb.md  tutorial_ical.md  tutorial_influxdb-grafana-integration.md  tutorial_inst_annotation.md  tutorial_mono-node.md  tutorial_multi-node.md  tutorial_pre-defined_levels.md
exec/: benchmon-check  benchmon-config  benchmon-hardware  benchmon-install-grafana  benchmon-multinode-start  benchmon-multinode-stop  benchmon-pause  benchmon-postprocess  benchmon-report  benchmon-resume  benchmon-run  benchmon-setup  benchmon-slurm-start  benchmon-software  benchmon-start  benchmon-start-grafana  benchmon-stop  benchmon-stop-grafana  benchmon-visu
gitlab-ci/includes/: release.gitlab-ci.yml
grafana/: deploy_dashboard.py  docker-compose.influxdb.yml  install_standalone.sh  job_template.slurm  port_utils.sh  setup_permissions.sh  start_local_services.sh  stop_local_services.sh  test_local_setup.sh  test_slurm_setup.sh
grafana/dashboards/: benchmon-system-metrics-multinode.json  benchmon-system-metrics-separated.json  benchmon-system-metrics-unified.json  benchmon-system-metrics.json  system-monitoring-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: influxdb.yml
run/: pytest.ini
test/: test_run.py
tests/: conftest.py  test_benchmon-run.py  test_benchmon-visu.py  test_benchmon-visu_func.py  test_csv_importer.py  test_flake8.py  test_g5k.py  test_hp_collector.py  test_metrics.py  test_run_monitor.py  test_visualizer.py  test_visualizer_influxdb.py
tests/data_for_visu/benchmon_traces_jed/: ib_report.csv  mono_to_real_file.txt
tests/data_for_visu/benchmon_traces_jed/pkl_dir/: cpu_prof.pkl  cpu_stamps.pkl  cpufreq_prof.pkl  cpufreq_stamps.pkl  cpufreq_vals.pkl  disk_data.pkl  disk_maj.pkl  disk_prof.pkl  disk_stamps.pkl  ib_data.pkl  ib_prof.pkl  ib_stamps.pkl  mem_prof.pkl  mem_stamps.pkl  net_data.pkl  net_prof.pkl  net_stamps.pkl
tests/data_for_visu/benchmon_traces_neowise-8-ref.lyon.grid5000.fr/: call_report.txt  list_recorded_perf_cmds.txt  mem_report.csv  mono_to_real_file.txt  net_report.csv
tests/data_for_visu/benchmon_traces_neowise-8.lyon.grid5000.fr/: cpu_report.csv  cpufreq_report.csv  disk_report.csv  g5k_pow_report_bmc_node_power_watt.json  g5k_pow_report_wattmetre_power_watt.json  ib_report.csv  pow_report.csv
tests/data_for_visu/benchmon_traces_neowise-8.lyon.grid5000.fr/pkl_dir/: call_cmds.pkl  call_ft.C.x_samples.pkl  call_ft.C.x_tids.pkl  call_samples.pkl  cpu_prof.pkl  cpu_stamps.pkl  cpufreq_prof.pkl  cpufreq_stamps.pkl  cpufreq_vals.pkl  disk_data.pkl  disk_prof.pkl  disk_stamps.pkl  ib_data.pkl  ib_prof.pkl  ib_stamps.pkl  mem_prof.pkl  mem_stamps.pkl  net_data.pkl  net_prof.pkl  net_stamps.pkl  pow_prof.pkl  pow_stamps.pkl
tests/data_for_visu/benchmon_traces_neowise-9.lyon.grid5000.fr/: call_report.txt  cpu_report.csv  cpufreq_report.csv  disk_report.csv  g5k_pow_report_bmc_node_power_watt.json  g5k_pow_report_wattmetre_power_watt.json  ib_report.csv  list_recorded_perf_cmds.txt  mem_report.csv  mono_to_real_file.txt  net_report.csv  pow_report.csv
tests/g5k/: ft.A.x  test.sh
(+22 files in other folders)
