[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ska-sdp-benchmark-monitor"
version = "0.1.0"
description = "SDP Benchmark Monitor for performance analysis."
authors = [{ name = "Manuel Stutz", email = "manuel.stutz@fhnw.ch" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "ping3",
    "numpy",
    "matplotlib"
]